<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/main_menu_group">
        <item
            android:id="@+id/savehtml"
            android:title="@string/sharePageSource"
            app:showAsAction="never" />
        <item
            android:id="@+id/inspectorMode"
            android:icon="@drawable/ic_touch_app"
            android:title="@string/inspectorMode"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/open"
            android:title="@string/open"
            app:showAsAction="never" />
        <item
            android:id="@+id/opencss"
            android:title="@string/opencss"
            app:showAsAction="never" />
        <item
            android:id="@+id/request_desktop"
            android:checkable="true"
            android:title="@string/request_desktop_version"
            android:visible="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/refresh"
            android:title="@string/refresh"
            app:showAsAction="never" />
        <item
            android:id="@+id/viewelements"
            android:icon="@drawable/ic_cached"
            android:title="@string/view_elements"
            app:showAsAction="never" />
        <item
            android:id="@+id/viewHTML"
            android:title="@string/viewHTML"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>
</menu>
